hide scrollbar inside tabs and fix scroll behaviour

--- a/ClientModule/src/app/components/main/personal/personal.component.css
+++ b/ClientModule/src/app/components/main/personal/personal.component.css
@@ -10,6 +10,10 @@ mat-sidenav {
   margin-top: 48px;
 }
 
+::ng-deep mat-sidenav-content {
+  overflow: hidden !important;
+}
+
 .tab-container {
   padding: 0 2em;
 }
