--- a/ClientModule/src/app/components/tabs/students/students.component.css
+++ b/ClientModule/src/app/components/tabs/students/students.component.css
@@ -1,3 +1,7 @@
+.table-container {
+  margin: 2em 0;
+}
+
 table {
   width: 100%;
 }
